# CorruptedMNIST_MLOps_DTU

./: .evn.example  .gitignore  .pre-commit-config.yaml  README.md  cloudbuild.yaml  corrupted_mnist  corrupted_mnist.pub  data.dvc  data.py  main.py  model.pth  pyproject.toml  requirements.txt  requirements_222.txt  requirements_petr_2.txt  requirements_tests.txt  tasks.py  train.dockerfile  wandb.py
.dvc/: config
.github/workflows/: cm_data.yaml  tests.yaml
CorruptedMNIST_MLOps_DTU/: README.md  pyproject.toml  tasks.py
CorruptedMNIST_MLOps_DTU/dockerfiles/: train.dockerfile
CorruptedMNIST_MLOps_DTU/docs/: mkdocs.yaml
config/: config.yaml
config/model/: mnist_cnn.yaml
config/optimizer/: adam.yaml  nesterov.yaml
configs/: config.yaml
configs/models/: model.yaml
configs_2/models/: model_2.yaml
configs_2/training/: training.yaml
dockerfiles/: evaluate.dockerfile  train.dockerfile
models/: model.pth
src/corrupted_mnist/: data.py  data_2.py  dataset_stat.py  evaluate.py  model.py  train.py  visualize.py
tests/: skip_test_train.py  test_data.py  test_model.py
wandb/offline-run-20250113_221743-xv9qyxy0/: run-xv9qyxy0.wandb
wandb/run-20250113_214615-x3fxbfvk/: run-x3fxbfvk.wandb
wandb/run-20250113_215130-73jlxvpx/: run-73jlxvpx.wandb
wandb/run-20250113_215316-dx83u2a8/: run-dx83u2a8.wandb
wandb/run-20250113_215716-n80eka53/: run-n80eka53.wandb
wandb/run-20250113_220551-mzp8c14r/: run-mzp8c14r.wandb
wandb/run-20250113_221112-kp8jmg0t/: run-kp8jmg0t.wandb
wandb/run-20250113_221320-m0shdwdp/: run-m0shdwdp.wandb
(+66 files in other folders)
