[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "corrupted_mnist"
version = "0.0.1"
description = "Training small Neural Network and training Github"
authors = [
  { name = "Petr Nylander", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
select = ["I"]

[tool.ruff.lint]
select = ["I001"]

[tool.coverage.run]
omit = ["tests/*"]
